# binary-algebra

./: .gitignore  README.md  buffer_overflow_templates_20250711_182422.txt
behavior_algebra/: README.md  __init__.py  disassembler.py  setup.py  test_cli.sh
behavior_algebra/data/: cwe787_examples_64bit  cwe787_examples_64bit_liter  tiny_minimal
dynint/.claude/: settings.local.json
dynint/dynint/: .dockerignore  Dockerfile  FINAL_STATUS.md  README.md  docker-compose.yml  pyproject.toml  run_tests.sh  spacecraft_server_linux_x86
dynint/dynint/dynint/: __init__.py  addrutils.py  cli.py  dynmap.py  mapfile.py
dynint/dynint/dynint/dyntrace/: __init__.py  frida_backend.py  runner.py  sampling.py
dynint/dynint/output/dyntrace/: spacecraft_malloc_demo.jsonl
dynint/dynint/tests/: conftest.py  test_dynmap.py  test_dyntrace.py  test_sampling.py
other/: modeling.py  templates_generator.ipynb
other/compiler/: README.md  buffer_overflow_analysis.md  compile.sh  debug_buffer_overflow.py  debug_pattern.py  satellite_exploit_client.c  satellite_ground_station.c  (+1 more)
slicer/: README.md  behavior_algebra_20250326_195954.txt  flow  slice_builder.py  slicer.py  slicer_fixed.py
symbolic_modeling/: .gitignore  README.md  constraint_generator.py  instruction_parser.py  main.py  modeling.py  postconditions.py  requirements.txt  semantics_parser.py  setup.py  solver_integration.py  symbolic_environment.py  symbolic_execution.py  symbolic_hex.py  symbolic_hex_printer.py  template.txt  trace_recorder.py
symbolic_modeling_old/: main.py  symbolic_environment.py  tracer.py
(+51 files in other folders)
